31787.home.header.608 fix z-index

--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -26,6 +26,7 @@
         display: block;
         width: 100%;
         height: 100%;
+        z-index: 5;
     }
 
     &__logo {
